--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = m"
+    "la_boca_marker = None"
    ]
   },
   {
